--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,7 @@ services:
       POSTGRES_DB: testing
     volumes:
       - postgres:/var/lib/postgresql/data
-      - ./pkg/postgres/schema.sql:/docker-entrypoint-initdb.d/schema.sql:ro
-      - ./pkg/util/outboxce/postgres/schema.sql:/docker-entrypoint-initdb.d/outboxce.sql:ro # outboxce
+      - ./internal/postgres/schema.sql:/docker-entrypoint-initdb.d/schema.sql:ro
     ports: 
       - 5432:5432
 
