--- a/api/openapi-spec/src/paths/tenants-*-profiles-*.yml
+++ b/api/openapi-spec/src/paths/tenants-*-profiles-*.yml
@@ -1,19 +1,19 @@
+parameters:
+  - name: tenant-id
+    required: true
+    in: path
+    schema:
+      $ref: "../schemas/common.yml#/components/schemas/UUID"
+  - name: profile-id
+    in: path
+    required: true
+    schema:
+      $ref: "../schemas/common.yml#/components/schemas/UUID"
 get:
   security:
     - {}
   summary: "get profile"
   operationId: "GetProfile"
-  parameters:
-    - name: tenant-id
-      required: true
-      in: path
-      schema:
-        $ref: "../schemas/profile.yml#/components/schemas/UUID"
-    - name: profile-id
-      in: path
-      required: true
-      schema:
-        $ref: "../schemas/profile.yml#/components/schemas/UUID"
   responses:
     200:
       description: "success"
@@ -26,16 +26,16 @@ get:
       content:
         "application/json":
           schema:
-            $ref: "../schemas/profile.yml#/components/schemas/Error"
+            $ref: "../schemas/common.yml#/components/schemas/Error"
     404:
       description: bad request
       content:
         "application/json":
           schema:
-            $ref: "../schemas/profile.yml#/components/schemas/Error"
+            $ref: "../schemas/common.yml#/components/schemas/Error"
     500:
       description: server error
       content:
         "application/json":
           schema:
-            $ref: "../schemas/profile.yml#/components/schemas/Error"
+            $ref: "../schemas/common.yml#/components/schemas/Error"
