--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -86,8 +86,6 @@ services:
       PROFILE_TLS_CLIENT_CA_PATH: /local/ca.crt
       PROFILE_TLS_ROOT_CA_PATH: /local/ca.crt
       PROFILE_TLS_MUTUAL_AUTH: "false"
-      PROFILE_OTEL_TRACE_EXPORTER:
-      PROFILE_OTEL_LOG_EXPORTER:
       PROFILE_LOG_LEVEL:
 
       PROFILE_HTTP_LISTEN_ADDRESS: :8443
@@ -95,6 +93,13 @@ services:
       PROFILE_KAFKA_BROKERS: kafka:9092
       PROFILE_KAFKA_TOPIC_OUTBOX: outbox
       PROFILE_POSTGRES_URL: postgres://testing:testing@postgres:5432/testing?sslmode=disable
+
+      OTEL_LOGS_EXPORTER:
+      OTEL_TRACES_EXPORTER:
+      OTEL_METRICS_EXPORTER:
+      OTEL_EXPORTER_OTLP_LOGS_PROTOCOL:
+      OTEL_EXPORTER_OTLP_METRICS_PROTOCOL:
+      OTEL_EXPORTER_OTLP_TRACES_PROTOCOL:
     volumes:
       - ./.local:/local
     ports:
