--- a/pkg/outboxce/opostgres/docker-compose.yml
+++ b/pkg/outboxce/opostgres/docker-compose.yml
@@ -1,7 +1,8 @@
 volumes:
   goose:
   goose-build:
-  
+
+
 services:
   postgres:
     image: postgres:16
@@ -13,24 +14,18 @@ services:
     ports:
       - 5432:5432
   goose:
-    image: golang:1.23
+    image: kukymbr/goose-docker:3.26.0
     depends_on:
       postgres:
         condition: service_started
     volumes:
-      - goose:/go/pkg/mod
-      - goose-build:/root/.cache/go-build
       - ${PWD:-.}:${PWD:-/src}
     working_dir: ${PWD:-/src}
-    entrypoint: 
-      - go
-      - run
-      - -mod=mod
-      - github.com/pressly/goose/v3/cmd/goose 
+    entrypoint: [ goose ]
+    command:
       - -dir=./migration/
       - postgres
       - postgres://testing:testing@postgres:5432/testing?sslmode=disable
-    command: 
       - up
   pg_dump:
     image: postgres:16
@@ -42,7 +37,7 @@ services:
     volumes:
       - ${PWD:-.}:${PWD:-/src}
     working_dir: ${PWD:-/src}
-    entrypoint: [pg_dump]
+    entrypoint: [ pg_dump ]
     command:
       - "-h"
       - "postgres"
